[tool.poetry]
name = "heroku"
version = "0.1.0"
description = ""
authors = ["Diego Fan <diegoeco.fan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gunicorn = "^20.1.0"
Flask = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
