[tool.poetry]
name = "heroku"
version = "0.1.0"
description = ""
authors = ["Diego Fan <diegoeco.fan@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.12"
gunicorn = "^20.1.0"
Flask = "^2.1.1"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
